# postgres-fastmcp

./: .gitignore  Dockerfile  Makefile  README.md  config.json  config.json.example  config.test.json  docker-compose.yml  docker-entrypoint.sh  env.example  pyproject.toml  test_static_server.py
docker/: README.md  config.json
docker/postgres/: Dockerfile  init-4-databases.sql  init-4-test-databases.sql  init-all-databases.sh  init-db.sql
docs/architecture/: README.md  multi-endpoint-server.md
src/postgres_fastmcp/: __init__.py  enums.py  logger.py  main.py
src/postgres_fastmcp/common/: __init__.py  utils.py
src/postgres_fastmcp/config/: __init__.py  database.py  fastmcp.py  keycloak.py  redis.py  server.py
src/postgres_fastmcp/database_health/: buffer_health_calc.py  connection_health_calc.py  constraint_health_calc.py  database_health.py  index_health_calc.py  replication_calc.py  sequence_health_calc.py  vacuum_health_calc.py
src/postgres_fastmcp/explain/: .cursorrules  artifacts.py  explain_plan.py
src/postgres_fastmcp/index/: dta_calc.py  index_opt_base.py  llm_opt.py  presentation.py
src/postgres_fastmcp/server/: __init__.py  auth.py  base.py  common.py  http.py  lifespan.py  stdio.py
src/postgres_fastmcp/server/middleware/: __init__.py  error_to_string.py  manager.py
src/postgres_fastmcp/sql/: __init__.py  extension_utils.py  index.py  safe_sql.py  sql_driver.py
src/postgres_fastmcp/tool/: __init__.py  constants.py  descriptions.py  tools.py
src/postgres_fastmcp/top_queries/: top_queries_calc.py
src/postgres_mcp/: __init__.py  _server.py  artifacts.py  config.py  enums.py  logger.py  main.py  mcp_types.py  server.py
src/postgres_mcp/common/: errors.py
src/postgres_mcp/database_health/: .cursorrules  __init__.py  buffer_health_calc.py  connection_health_calc.py  constraint_health_calc.py  database_health.py  index_health_calc.py  replication_calc.py  sequence_health_calc.py  vacuum_health_calc.py
src/postgres_mcp/explain/: __init__.py  artifacts.py  explain_plan.py
src/postgres_mcp/index/: __init__.py  dta_calc.py  index_opt_base.py  llm_opt.py  presentation.py
src/postgres_mcp/models/: __init__.py  config.py
src/postgres_mcp/server/: __init__.py  base.py  common.py  http.py  lifespan.py  stdio.py
src/postgres_mcp/sql/: __init__.py  bind_params.py  extension_utils.py  safe_sql.py  sql_driver.py
src/postgres_mcp/tool/: __init__.py  constants.py  descriptions.py  queries.py  tools.py  utils.py
src/postgres_mcp/top_queries/: __init__.py  top_queries_calc.py
tests/: conftest.py  prepare_docker_images.py  utils.py
tests/integration/: test_table_prefix.py  test_top_queries_integration.py
tests/integration/dta/: test_dta_calc_integration.py
tests/unit/: test_access_mode.py  test_config_tools.py  test_stdio_transport.py
tests/unit/database_health/: test_database_health_tool.py
tests/unit/explain/: test_explain_plan.py  test_explain_plan_real_db.py  test_server.py  test_server_integration.py
tests/unit/index/: test_dta_calc.py
tests/unit/server/: test_health_endpoint.py  test_tool_registration.py
tests/unit/sql/: test_db_conn_pool.py  test_obfuscate_password.py  test_readonly_enforcement.py  test_safe_sql.py  test_sql_driver.py
tests/unit/tool/: test_tool_manager.py
tests/unit/top_queries/: test_top_queries_calc.py
