[project]
name = "postgres-mcp"
version = "0.0.1"
description = "PostgreSQL Tuning and Analysis Tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "psycopg[binary]>=3.2.6",
    "humanize>=4.8.0",
    "pglast==7.2.0",
    "attrs>=25.3.0",
    "psycopg-pool>=3.2.6",
    "instructor>=1.7.9",
    "fastmcp>=2.13.0.2",
    "pydantic-settings>=2.11.0",
    "pydantic>=2.12.4",
]
license = "mit"
license-files = ["LICENSE"]

[[project.authors]]
name = "Andrey Shlyapin"
email = "andrey@skzd.ru"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
postgres-mcp = "postgres_mcp.main:main"
# Используем PyPI вместо внутренних репозиториев
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[dependency-groups]
dev = [
    "devtools>=0.12.2",
    "mypy>=1.17.1",
    "ruff>=0.12.9",
]

[tool.mypy]
plugins = "pydantic.mypy"
python_version = "3.12"
strict = true
exclude = [".venv", "tests"]

[[tool.mypy.overrides]]
module = [
    "pglast",
    "pglast.*",
    "psycopg",
    "psycopg_pool",
    "humanize",
    "instructor",
    "mcp",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".venv*", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in `__init__`
    "RUF001",  # String contains ambiguous unicode character
    "RUF002",  # Docstring contains ambiguous unicode character
    "RUF003",  # Comment contains ambiguous unicode character
    "COM812",  # Trailing comma missing
    "CPY001",  # Copyright ignore
    "BLE001",  # Blind exception
    "PLR1702",
    "PLR0912",
    "PLR0914",
    "PLR0915",
    "TRY400",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # Checks for uses of the `assert` keyword
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
lines-after-imports = 2
force-wrap-aliases = true
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.analyze]
detect-string-imports = true

[tool.ruff.format]
docstring-code-format = true

[tool.uv]


